--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,20 @@
     "description": "it is a sample mvc project",
     "authors": [
         {
-            "name": "mohammad",
-            "email": "mohamad.darghah@gmail.com"
+            "name": "reza",
+            "email": "rshoorvazi@gmail.com"
         }
     ],
     "autoload": {
         "psr-4": {
             "App\\": "./"
-        }
+        },
+        "files": [
+            "./Core/Helpers.php"
+
+        ]
     },
-    "require": {}
+    "require": {
+        "kavenegar/php": "^1.2"
+    }
 }
